Updating XMLFormatter and JavaFormatter writeups