@@ -12,53 +12,41 @@ package com.pump.swing;
 
 import java.awt.Color;
 import java.awt.Font;
-import java.io.Reader;
-import java.io.StringReader;
 
 import javax.swing.text.AttributeSet;
 import javax.swing.text.JTextComponent;
 import javax.swing.text.SimpleAttributeSet;
 import javax.swing.text.StyleConstants;
 
-import com.pump.io.parser.Parser.CommentToken;
 import com.pump.io.parser.Parser.StringToken;
 import com.pump.io.parser.Parser.SymbolCharToken;
 import com.pump.io.parser.Parser.UnparsedToken;
 import com.pump.io.parser.Token;
-import com.pump.io.parser.java.JavaParser;
 import com.pump.io.parser.java.JavaParser.CharToken;
-import com.pump.io.parser.java.JavaParser.WordToken;
+import com.pump.io.parser.xml.XMLParser;
+import com.pump.io.parser.xml.XMLParser.CommentToken;
+import com.pump.io.parser.xml.XMLParser.TagDeclarationToken;
+import com.pump.io.parser.xml.XMLParser.WordToken;
 import com.pump.text.TokenTextComponentHighlighter;
 import com.pump.util.Receiver;
 
-/**
- * This highlights text using a monospaced formatting scheme similar to the
- * default Eclipse formatting options.
- * 
- * @see <a
- *      href="https://javagraphics.blogspot.com/2015/12/text-formatting-source-code-in-swing.html">Text:
- *      Formatting Source Code in Swing</a>
- */
-public class JavaTextComponentHighlighter extends TokenTextComponentHighlighter {
+public class XMLFormatter extends TokenTextComponentHighlighter {
 
-	protected SimpleAttributeSet defaultAttributes;
-	protected SimpleAttributeSet keywordAttributes;
-	protected SimpleAttributeSet errorAttributes;
-	protected SimpleAttributeSet commentAttributes;
-	protected SimpleAttributeSet stringAttributes;
-	protected SimpleAttributeSet importantPunctuationAttributes;
+	protected SimpleAttributeSet defaultAttributes, elementNameAttributes,
+			errorAttributes, commentAttributes, stringAttributes,
+			importantPunctuationAttributes;
 
 	/**
-	 * Create a new JavaTextComponentHighlighter.
+	 * Create a new XMLFormatter.
 	 * 
 	 * @param jtc
 	 *            the text component to apply formatting to.
 	 */
-	public JavaTextComponentHighlighter(JTextComponent jtc) {
-		super(jtc);
+	public XMLFormatter(JTextComponent textPane) {
+		super(textPane);
 
-		jtc.putClientProperty("caretWidth", new Integer(3));
-		jtc.getCaret().setBlinkRate(500);
+		textPane.putClientProperty("caretWidth", Integer.valueOf(3));
+		textPane.getCaret().setBlinkRate(500);
 
 		initializeAttributes();
 
@@ -86,18 +74,18 @@ public class JavaTextComponentHighlighter extends TokenTextComponentHighlighter 
 			StyleConstants.setFontFamily(defaultAttributes, "Monospaced");
 			StyleConstants.setFontSize(defaultAttributes, 14);
 
-			keywordAttributes = new SimpleAttributeSet(defaultAttributes);
-			StyleConstants.setBold(keywordAttributes, true);
-			StyleConstants.setForeground(keywordAttributes, keywordColor);
+			elementNameAttributes = new SimpleAttributeSet(defaultAttributes);
+			StyleConstants.setBold(elementNameAttributes, true);
+			StyleConstants.setForeground(elementNameAttributes, keywordColor);
 
 			commentAttributes = new SimpleAttributeSet(defaultAttributes);
 			StyleConstants.setForeground(commentAttributes, commentColor);
 
-			stringAttributes = new SimpleAttributeSet(defaultAttributes);
-			StyleConstants.setForeground(stringAttributes, stringColor);
-
 			errorAttributes = new SimpleAttributeSet(defaultAttributes);
 			StyleConstants.setForeground(errorAttributes, errorColor);
+
+			stringAttributes = new SimpleAttributeSet(defaultAttributes);
+			StyleConstants.setForeground(stringAttributes, stringColor);
 
 			importantPunctuationAttributes = new SimpleAttributeSet(
 					defaultAttributes);
@@ -113,10 +101,9 @@ public class JavaTextComponentHighlighter extends TokenTextComponentHighlighter 
 			return stringAttributes;
 		}
 
-		if (token instanceof WordToken) {
-			WordToken word = (WordToken) token;
-			if (word.isKeyword || word.isLiteral)
-				return keywordAttributes;
+		Token prev = tokenIndex == 0 ? null : tokens[tokenIndex - 1];
+		if (token instanceof WordToken && prev instanceof TagDeclarationToken) {
+			return elementNameAttributes;
 		}
 
 		if (token instanceof CommentToken) {
@@ -139,8 +126,6 @@ public class JavaTextComponentHighlighter extends TokenTextComponentHighlighter 
 	@Override
 	protected void createTokens(String inputText, Receiver<Token> receiver)
 			throws Exception {
-		try (Reader reader = new StringReader(inputText)) {
-			new JavaParser().parse(reader, receiver);
-		}
+		new XMLParser().parse(inputText, receiver);
 	}
 }
